--- a/build.gradle
+++ b/build.gradle
@@ -19,13 +19,11 @@ buildscript {
     maven { url 'http://dl.bintray.com/jetbrains/intellij-plugin-service' }
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
   }
-  dependencies {
-    classpath "org.jetbrains.intellij.plugins:gradle-intellij-plugin:0.2.0-SNAPSHOT"
-  }
 }
 
 plugins {
   id "de.undercouch.download" version "3.1.0"
+  id "org.jetbrains.intellij" version "0.2.17"
 }
 
 apply plugin: 'de.undercouch.download'
